About image should be better viewed on mobile. [issue #1]

--- a/assets/css/_sass/_post.scss
+++ b/assets/css/_sass/_post.scss
@@ -18,10 +18,11 @@
   display: block;
   max-width: 600px;
 }
-.center iframe{
-    margin-left: auto;
-    margin-right: auto;
-    display: block
+.image img {
+  align: middle;
+  margin: 5px auto 25px;
+  display: block;
+  max-width: 600px;
 }
 @media (max-width: $container-width) {
   .page-content {
@@ -38,6 +39,12 @@
     display: block;
     max-width: 60vw;
   }
+  .image img {
+    align: middle;
+    margin: 5px auto 25px;
+    display: block;
+    max-width: 60vw;
+  }
 }
 @media (max-width: $tablet-width) {
   .page-content {
@@ -49,6 +56,12 @@
     margin-bottom: 10px;
   }
   .featured-image img {
+    align: middle;
+    margin: 5px auto 25px;
+    display: block;
+    max-width: 95vw;
+  }
+  .image img {
     align: middle;
     margin: 5px auto 25px;
     display: block;
